# CS202-FinalProject

./: .gitignore  25125074_25125037.md  AGENTS.md  upgrade.md
AppleKnightAdventure/: CMakeLists.txt  CODEGRAPH.md  README.md  UPDATE_VERSION  UPDATE_VERSION.md  VIEW_API_GUIDE.md
AppleKnightAdventure/assets/shaders/: shadow.fs  shadow.vs
AppleKnightAdventure/assets/textures/: menu_button.json  pause_button.json  player.json  ui_atlas.json
AppleKnightAdventure/assets/textures/boss/: attack.json  boss_attack_a.json  boss_attack_b.json  boss_attack_c.json  boss_attack_miss.json  death.json  hit.json  idle.json  walk.json
AppleKnightAdventure/assets/textures/enemies/: flying.json  flying_projectile.json  flying_spritesheet.json  melee.json  melee_idle.json  melee_sword.json  ranged.json  ranged_bomb.json  ranged_idle.json  ranged_run.json  status_atlas.json
AppleKnightAdventure/assets/textures/items/: apple.json  bag_coins.json  coin.json  equipment.json  key.json  key_silver.json  (+2 more)
AppleKnightAdventure/include/Factories/: EnemyFactory.h  ItemFactory.h  LevelFactory.h
AppleKnightAdventure/include/Model/: Boss.h  Character.h  Checkpoint.h  Chest.h  CrossWorldManager.h  DualWorld.h  DualWorldPlayer.h  Enemy.h  Entity.h  FakeWall.h  GameState.h  Inventory.h  Item.h  LevelScoring.h  Pet.h  Player.h  Projectile.h  Registry.h
AppleKnightAdventure/include/Network/: Client.h  NetworkManager.h  Packet.h  Server.h
AppleKnightAdventure/include/Systems/: AnimationSystem.h  CollisionSystem.h  ElementalSystem.h  ObjectPool.h  ObservableList.h  ParticleSystem.h  Quadtree.h  RenderSystem.h  RenderTypes.h  Renderer.h  SoundManager.h  TextureAtlas.h
AppleKnightAdventure/include/Utils/: Constants.h  Types.h
AppleKnightAdventure/include/View/: Animator.h  CharacterRenderer.h  ElementalFX.h  EnemyStatusRenderer.h  EntityRenderer.h  FloatingText.h  GameView.h  HUDView.h  InteractPrompt.h  InventoryView.h  MenuView.h  ParticleRenderer.h  RenderTypes.h  Renderer.h  ResultView.h  SkillBarView.h  TextureAtlas.h  UIHelpers.h  UIStateManager.h
AppleKnightAdventure/src/: main.cpp
AppleKnightAdventure/src/Factories/: EnemyFactory.cpp  ItemFactory.cpp  LevelFactory.cpp
AppleKnightAdventure/src/Model/: Boss.cpp  Character.cpp  Checkpoint.cpp  Chest.cpp  CrossWorldManager.cpp  DualWorld.cpp  DualWorldPlayer.cpp  Enemy.cpp  Entity.cpp  FakeWall.cpp  GameState.cpp  Inventory.cpp  Item.cpp  LevelScoring.cpp  Pet.cpp  Player.cpp  Projectile.cpp  Registry.cpp
AppleKnightAdventure/src/Network/: Client.cpp  NetworkManager.cpp  Packet.cpp  Server.cpp
AppleKnightAdventure/src/Systems/: AnimationSystem.cpp  CollisionSystem.cpp  ElementalSystem.cpp  ParticleSystem.cpp  Quadtree.cpp  RenderSystem.cpp  Renderer.cpp  SoundManager.cpp  TextureAtlas.cpp
AppleKnightAdventure/src/View/: Animator.cpp  CharacterRenderer.cpp  ControllerIntegrationExample.cpp  ElementalFX.cpp  EnemyStatusRenderer.cpp  EntityRenderer.cpp  FloatingText.cpp  GameView.cpp  HUDView.cpp  InteractPrompt.cpp  InventoryView.cpp  MenuView.cpp  ParticleRenderer.cpp  Renderer.cpp  ResultView.cpp  SkillBarView.cpp  TextureAtlas.cpp  UIStateManager.cpp
AppleKnightAdventure/tests/: anim_test.cpp
(+23 files in other folders)
